--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "langchain"
+name = "altered_langchain"
 version = "0.0.233"
 description = "Building applications with LLMs through composability"
 authors = []
