Revert "Change metadata to altered langchain"
This reverts commit e9dbf353d5c32116e5ccb3347caa6cbfdc1caf20.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "altered_langchain"
+name = "langchain"
 version = "0.0.233"
 description = "Building applications with LLMs through composability"
 authors = []
